syntax = "proto3";
package proto;
option go_package = ".";

service TweetService {
  rpc ReturnAll(ReturnAllReq) returns (ReturnAllRes);
  rpc ReturnTweet(ReturnTweetReq) returns (ReturnTweetRes);
  rpc PostTweet(PostTweetReq) returns (PostTweetRes);
  rpc DeleteData(DeleteDataReq) returns (DeleteDataRes);
}

message Tweet{
  string UserID = 1;
  string Username = 2;
  string TweetID = 3;
  string Body = 4;
}

//return all tweets
message ReturnAllReq{}
message ReturnAllRes{repeated Tweet tweet = 1;}

//return single tweet
message ReturnTweetReq{string TweetID = 1;}
message ReturnTweetRes{Tweet tweet = 1;}

//create tweet
message PostTweetReq{Tweet tweet = 1;}
message PostTweetRes{Tweet tweet = 1;}

//Delete data
message DeleteDataReq{string userId = 1;}
message DeleteDataRes{string status = 1;}